Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36219

Network requests hangs with cache written by older Qt version

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Some future release
    • 5.1.1, 5.2.0, 5.3.0 Alpha, 5.3.0 Beta1, 5.3.0
    • Network: Cache
    • None
    • Windows 7, x86, msvc2010, ANGLE.
      Mageia Linux Cauldron i586.
    • feb1afc78290433b0c22b1b3f6d65542eeb5b957

      If the network cache is written with Qt 5.1.1, program built with Qt 5.2.0 cannot use this cache properly and hangs on network requests.

      To reproduce:
      1. Build program with Qt 5.1.1 and run it.
      2. You should see message in the console.
      3. Then build with Qt 5.2.0 and run.
      4. No message, network request is hanging.

        1. Company.zip
          5 kB
        2. date_data.zip
          0.2 kB
        3. main.cpp
          0.9 kB
        4. NetworkCacheHang.zip
          2 kB
        For Gerrit Dashboard: QTBUG-36219
        # Subject Branch Project Status CR V

            peter-har Peter Hartmann
            krnekit Nikita Krupenko
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes